--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,10 @@ canvas {
   max-width: 1120px;
 }
 
+.nav:hover .navDropdown {
+  @apply translate-y-[0] opacity-100
+}
+
 @layer utilities {
   .flex-center {
     @apply flex items-center justify-center
