--- a/app/globals.css
+++ b/app/globals.css
@@ -88,7 +88,7 @@ canvas {
   }
 
   .hero-title {
-    @apply text-center font-medium text-3xl text-gray-100 opacity-0 max-md:mb-10
+    @apply text-center font-medium text-3xl tracking-tight text-gray-100 opacity-0 max-md:mb-10
   }
 
   .hiw-title {
