Video carousel work

--- a/app/globals.css
+++ b/app/globals.css
@@ -80,7 +80,7 @@ canvas {
   }
 
   .link {
-    @apply text-blue hover:underline cursor-pointer flex items-center text-xl opacity-0 translate-y-20
+    @apply text-blue hover:underline cursor-pointer flex items-center text-base md:text-xl opacity-0 translate-y-20
   }
 
   .control-btn {
@@ -116,7 +116,7 @@ canvas {
   }
 
   .video-carousel_container {
-    @apply relative sm:w-[70vw] w-[88vw] md:h-[70vh] sm:h-[50vh] h-[35vh]
+    @apply relative w-[100vw] sm:w-[88vw] md:h-[70vh] sm:h-[50vh] h-[70vh]
   }
 
   .g_fadeIn {
