Added spanArray to render the videoSpans correctly

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,11 @@
   box-sizing: border-box;
 }
 
+main {
+  touch-action: pan-y;
+  overflow-y: auto;
+}
+
 body {
   color: white;
   width: 100dvw;
