--- a/app/globals.css
+++ b/app/globals.css
@@ -131,4 +131,8 @@ canvas {
   .g_fadeIn {
     @apply opacity-0 translate-y-[100px]
   }
+
+  #scroll-container {
+    scrollbar-width: none;
+  }
 }
